--- a/quix.yaml
+++ b/quix.yaml
@@ -131,22 +131,22 @@ deployments:
         inputType: FreeText
         description: Host address for the InfluxDB instance.
         required: true
-        value: https://us-east-1-1.aws.cloud2.influxdata.com
+        secret: influxdb_host
       - name: INFLUXDB_TOKEN
         inputType: FreeText
         description: Authentication token to access InfluxDB.
         required: true
-        value: iWGU-RZ-AoML0bP4kjabHrqlB3IDtyLPAs_XMDpGOldEvQrzmtwC2Y-4arrkl1BX_bQpEvtYGgh16pJyviIsvA==
+        secret: influxdb_token
       - name: INFLUXDB_ORG
         inputType: FreeText
         description: Organization name in InfluxDB.
         required: false
-        value: ContentSquad
+        value: {{influxdb_org}}
       - name: INFLUXDB_DATABASE
         inputType: FreeText
         description: Database name in InfluxDB where data should be stored.
         required: true
-        value: ConversationStore
+        value: {{influxdb_database}}
       - name: INFLUXDB_TAG_COLUMNS
         inputType: FreeText
         description: Columns to be used as tags when writing data to InfluxDB.
@@ -156,7 +156,7 @@ deployments:
         inputType: FreeText
         description: The InfluxDB measurement to write data to. If not specified, the name of the input topic will be used
         required: false
-        value: conversations
+        value: {{influxdb_measurement}}
 
 # This section describes the Topics of the data pipeline
 topics:
